--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,8 @@ language: R
 sudo: false
 cache: packages
 warnings_are_errors: false
+
+notifications:
+  email:
+    on_success: never
+    on_failure: never
