--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Penalized FamaMacBeth
 Version: 0.1.0
 Author: Erik
-Maintainer: Erik <erik.fredriksen@phdstudent.hhs.se>
+Maintainer: Erik <erik.sverdrup@gmail.com>
 Description: Penalized and plain FMB estimation.
 License: MIT
 Encoding: UTF-8
